Use jackson in place of gson for serialization